@@ -13,12 +13,9 @@ continue to merge edge based research into mainline code
 research mapped edge length and fix edge ratio length routines
 
 gridcad : get rid of 
--gridRobustProjectNode
 -gridOptimizeFaceUV
 -gridSmoothFaceMR
 -gridOptimizeUVForVolume
-
-rename gridSafeProjectNode to just Projectnode
 
 gridmetric : get rid of
 -gridCellRatioErrorDerivative
