@@ -120,12 +120,12 @@ class TestGridCAD < Test::Unit::TestCase
   assert_equal 3,    grid.addNode(1,1,0)
   grid.addFace(0,1,2,7)
   grid.addFace(1,3,2,8)
-  assert_equal grid, grid.updateFaceParameter(1)
+  assert_equal grid, grid.updateFaceParameters(1)
   assert_equal [11,20], grid.nodeUV(1,7)
   assert_equal [11,20], grid.nodeUV(1,8)
  end
 
- def testProjectionToGeometry
+ def testNodalProjection
   assert_not_nil grid = Grid.new(5,1,1,1)
   assert_equal 0, grid.addNode(5.0,5.0,5.0)
   assert_equal 1, grid.addNode(0.0,0.1,0.1)
@@ -137,7 +137,7 @@ class TestGridCAD < Test::Unit::TestCase
   grid.addEdge(1,2,20,0.0,1.0)
   assert_equal grid, grid.setNGeomNode(1)
   5.times do |i| 
-   assert_equal grid, grid.safeProjectNode(i,1.0), "project node #{i}"
+   assert_equal grid, grid.projectNode(i), "project node #{i}"
   end
   assert_equal [5.0,5.0,5.0], grid.nodeXYZ(0)
   assert_equal [0.0,0.0,0.0], grid.nodeXYZ(1)
@@ -149,77 +149,6 @@ class TestGridCAD < Test::Unit::TestCase
   assert_equal [10.0,20.0],   grid.nodeUV(1,10)
   assert_equal [11.0,20.0],   grid.nodeUV(2,10)
   assert_equal [10.0,21.0],   grid.nodeUV(3,10)
- end
-
- def unprojectableTet
-  assert_not_nil grid = Grid.new(4,1,1,1)
-  assert_equal 0, grid.addNode(0.0,0.0,-0.5)
-  assert_equal 1, grid.addNode(1.0,0.0,0.0)
-  assert_equal 2, grid.addNode(0.0,1.0,0.0)
-  assert_equal 3, grid.addNode(0.0,0.0,-0.1)
-  grid.addCell(0,1,2,3)
-  grid.addFace(0,1,2,10)
-  grid
- end
-
- def testSafeProjectionForPositiveVolume
-  assert_not_nil grid = unprojectableTet
-  assert grid.minVolume>0.0, "negative volume cell "+grid.minVolume.to_s  
-  assert_nil   grid.safeProjectNode(0,1.0)
-  assert grid.minVolume>0.0, "negative volume cell "+grid.minVolume.to_s
-  assert_equal [0.0,0.0,-0.5], grid.nodeXYZ(0)
-  grid.addEdge(0,1,20,0.0,1.0)
-  assert_nil   grid.safeProjectNode(0,1.0)
-  assert grid.minVolume>0.0, "negative volume cell "+grid.minVolume.to_s
-  assert_equal [0.0,0.0,-0.5], grid.nodeXYZ(0)
- end
-
- def testSafeProjectionForBackOffRatioFace
-  assert_not_nil grid = unprojectableTet
-  assert grid.minVolume>0.0, "negative volume cell "+grid.minVolume.to_s  
-  assert_nil   grid.safeProjectNode(0,0.5)
-  assert grid.minVolume>0.0, "negative volume cell "+grid.minVolume.to_s
-  assert_equal [0.0,0.0,-0.25], grid.nodeXYZ(0)
- end
-
- def testSafeProjectionForBackOffRatioEdge
-  assert_not_nil grid = unprojectableTet
-  assert grid.minVolume>0.0, "negative volume cell "+grid.minVolume.to_s
-  grid.addEdge(0,1,20,0.0,1.0)
-  assert_nil   grid.safeProjectNode(0,0.5)
-  assert_nil   grid.project
-  assert grid.minVolume>0.0, "negative volume cell "+grid.minVolume.to_s
-  assert_equal [0.0,0.0,-0.25], grid.nodeXYZ(0)
- end
-
- def testSafeProjectionForBackOffRatioFaceTimeOut
-  assert_not_nil grid = unprojectableTet
-  assert grid.minVolume>0.0, "negative volume cell "+grid.minVolume.to_s  
-  assert_nil   grid.safeProjectNode(0,0.0)
-  assert grid.minVolume>0.0, "negative volume cell "+grid.minVolume.to_s
-  assert_equal [0.0,0.0,-0.5], grid.nodeXYZ(0)
- end
-
- def testSafeProjectionForBackOffRatioEdgeTimeOut
-  assert_not_nil grid = unprojectableTet
-  assert grid.minVolume>0.0, "negative volume cell "+grid.minVolume.to_s
-  grid.addEdge(0,1,20,0.0,1.0)
-  assert_nil   grid.safeProjectNode(0,0.0)
-  assert_nil   grid.project
-  assert grid.minVolume>0.0, "negative volume cell "+grid.minVolume.to_s
-  assert_equal [0.0,0.0,-0.5], grid.nodeXYZ(0)
- end
-
- def testProjectForPositiveVolume
-  assert_not_nil grid = unprojectableTet
-  assert grid.minVolume>0.0, "negative volume cell "+grid.minVolume.to_s  
-  assert_nil   grid.project
-  assert grid.minVolume>0.0, "negative volume cell "+grid.minVolume.to_s
-  assert_equal [0.0,0.0,-0.5], grid.nodeXYZ(0)
-  grid.addEdge(0,1,20,0.0,1.0)
-  assert_nil   grid.project
-  assert grid.minVolume>0.0, "negative volume cell "+grid.minVolume.to_s
-  assert_equal [0.0,0.0,-0.5], grid.nodeXYZ(0)
  end
 
  def isoTet(xpert = 0.0, zpert = 0.0, edge = nil)
