@@ -1,3 +1,9 @@
+2005-01-31 17:10 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridcad.c (gridProjectNode) Major refactoring to clean out
+	gridSafeProjectNode. Now the face parameters are updated durring
+	projection of edges.
+
 2005-01-31 15:22 Mike Park  <mike.park@nasa.gov>
 
 	* Made 1.2.5 Release. ** internal release ** the
